--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,6 +6,9 @@
 <p><label for="email">Email</label><br/>
 <%= f.text_field :email %></p>
 
+<p><label for="org">URL</label><br/>
+localhost/enter/<%= f.text_field :org %></p>
+
 <p><label for="password">Password</label><br/>
 <%= f.password_field :password %></p>
 
