--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,6 @@
+
+<h1>Sign Up</h1>
+
 <%= error_messages_for :user %>
 <% form_for :user, :url => users_path do |f| -%>
 <p><label for="login">Login</label><br/>
@@ -9,8 +12,8 @@
 <p><label for="org">Organization Name</label><br/>
 <%= f.text_field :org %></p>
 
-<p><label for="org">URL</label><br/>
-/enter/<%= f.text_field :url %></p>
+<p><label for="org">http://bespokeapp.com/enter/</label><br/>
+<%= f.text_field :url %></p>
 
 <p><label for="password">Password</label><br/>
 <%= f.password_field :password %></p>
