--- a/app/views/layouts/auth.html.erb
+++ b/app/views/layouts/auth.html.erb
@@ -6,6 +6,7 @@
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title><%= @title %></title>
   <%= stylesheet_link_tag 'authentication' %>
+  <%= stylesheet_link_tag 'master' %>
   <%= javascript_include_tag :defaults %>
 </head>
 <body>
