--- a/app/views/layouts/people.html.erb
+++ b/app/views/layouts/people.html.erb
@@ -5,13 +5,16 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title>People: <%= controller.action_name %></title>
-  <%= stylesheet_link_tag 'scaffold' %>
+  <%= stylesheet_link_tag 'master' %>
+  <%= stylesheet_link_tag 'admin' %>
+  
 </head>
 <body>
 
-<p style="color: green"><%= flash[:notice] %></p>
-
-<%= yield  %>
+<div id="container">
+  <p style="color: green"><%= flash[:notice] %></p>
+  <%= yield  %>
+</div>
 
 </body>
 </html>
