--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,3 @@
-
-<h1>Sign Up</h1>
-
 <%= error_messages_for :user %>
 <% form_for :user, :url => users_path do |f| -%>
 <p><label for="login">Login</label><br/>
@@ -21,5 +18,6 @@
 <p><label for="password_confirmation">Confirm Password</label><br/>
 <%= f.password_field :password_confirmation %></p>
 
-<p><%= submit_tag 'Sign up' %></p>
+<p class="form_actions"><a href="/" class="negative" title="Cancel">Cancel</a>
+<%= submit_tag 'Sign up', :class => 'positive' %></p>
 <% end -%>
