--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -1,71 +1,82 @@
-<h1>New person</h1>
+
 
 <%= error_messages_for :person %>
 
-<% form_for(@person) do |f| %>
-  <p>
-    <b>First name</b><br />
-    <%= f.text_field :first_name %>
-  </p>
+<% form_for(@person, :html => { :multipart => true }) do |f| %>
 
-  <p>
-    <b>Last name</b><br />
-    <%= f.text_field :last_name %>
-  </p>
+  <fieldset id="personal">
+    <legend>Personal Details</legend>
+    <p>
+      <label for="person_first_name">First Name</label><br />
+      <%= f.text_field :first_name %>
+    </p>
 
-  <p>
-    <b>Telephone</b><br />
-    <%= f.text_field :telephone %>
-  </p>
+    <p>
+      <label for="person_last_name">Last Name</label><br />
+      <%= f.text_field :last_name %>
+    </p>
 
-  <p>
-    <b>Email</b><br />
-    <%= f.text_field :email %>
-  </p>
+    <p>
+      <label for="person_telephone">Telephone</label><br />
+      <%= f.text_field :telephone %>
+    </p>
 
-  <p>
-    <b>Addr addr</b><br />
-    <%= f.text_area :addr_addr %>
-  </p>
+    <p>
+      <label for="person_email">Email</label><br />
+      <%= f.text_field :email %>
+    </p>
+  
+    <p>
+      <label for="person_photo">Photo</label><br />
+      <!-- <%= f.text_field :photo %> -->
+      <%= file_column_field "person", "photo" %>
+    </p>
 
-  <p>
-    <b>Addr extended</b><br />
-    <%= f.text_area :addr_extended %>
-  </p>
+    <p>
+      <label for="person_role">Role</label><br />
+      <!-- <%= f.text_field :role %> -->
+      <%= select("person","role",["Vendor", "Client"]) %>
+    </p>
+  </fieldset>
 
-  <p>
-    <b>Addr street</b><br />
-    <%= f.text_area :addr_street %>
-  </p>
 
-  <p>
-    <b>Addr city</b><br />
-    <%= f.text_field :addr_city %>
-  </p>
+  <fieldset id="addr">
+    <legend>Address</legend>
+    <p>
+      <label for="person_addr_addr">Address</label><br />
+      <%= f.text_field :addr_addr %>
+    </p>
 
-  <p>
-    <b>Addr region</b><br />
-    <%= f.text_field :addr_region %>
-  </p>
+    <p>
+      <label for="person_addr_extended">Address [Extended]</label><br />
+      <%= f.text_field :addr_extended %>
+    </p>
 
-  <p>
-    <b>Addr country</b><br />
-    <%= f.text_field :addr_country %>
-  </p>
+    <p>
+      <label for="person_addr_street">Street</label><br />
+      <%= f.text_field :addr_street %>
+    </p>
 
-  <p>
-    <b>Photo</b><br />
-    <%= f.text_field :photo %>
-  </p>
+    <p>
+      <label for="person_addr_city">City</label><br />
+      <%= f.text_field :addr_city %>
+    </p>
 
-  <p>
-    <b>Role</b><br />
-    <%= f.text_field :role %>
-  </p>
+    <p>
+      <label for="person_addr_region">Region/Province</label><br />
+      <%= f.text_field :addr_region %>
+    </p>
 
-  <p>
-    <%= f.submit "Create" %>
+    <p>
+      <label for="person_addr_country">Country</label><br />
+       <!-- <%= f.text_field :addr_country %>  -->
+      <%= f.country_select :addr_country %>
+    </p>
+  </fieldset>
+
+  <p class="form_actions">
+    <%= link_to 'Back', people_path, :class => "negative" %>
+    <%= f.submit "Create", :class => "positive" %>
   </p>
 <% end %>
 
-<%= link_to 'Back', people_path %>
